feat: busy wait ou ambos

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
 cmake-build-debug/*
-/sinais/blocking_wait/sender
-/sinais/blocking_wait/receiver
+/sinais/*/sender
+/sinais/*/receiver
+CMakeLists.txt
