--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,7 @@ add_executable(trabalho_pratico sinais/blocking_wait/receiver.c
         sinais/busy_wait/sender.c
         sinais/busy_wait/receiver.c
         sinais/ambos/receiver.c
-        sinais/ambos/sender.c)
+        sinais/ambos/sender.c
+        pipes/produtor.c
+        pipes/consumidor.c
+)
