--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ add_executable(trabalho_pratico sinais/blocking_wait/receiver.c
         sinais/busy_wait/receiver.c
         sinais/ambos/receiver.c
         sinais/ambos/sender.c
-        pipes/produtor.c
-        pipes/consumidor.c
+        pipes_v1/producer.c
+        pipes_v1/consumer.c
+        sockets/consumer.c
+        sockets/producer.c
 )
